<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_home_city"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:paddingTop="0dp"
        tools:src="@drawable/_city_hamburg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@color/colorButton"
            android:text="@string/home_button_overview" />

        <Button
            android:id="@+id/button_plantage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@color/colorButton"
            android:text="@string/home_button_plantage" />

        <Button
            android:id="@+id/button_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@color/colorButton"
            android:text="@string/home_button_market" />

        <Button
            android:id="@+id/button_casino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@color/colorButton"
            android:text="@string/home_button_casino" />

        <Button
            android:id="@+id/button_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@color/colorButton"
            android:text="@string/home_button_gallery" />

        <Button
            android:id="@+id/button_auktion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/home_button_Auktion" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>