<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLight">

    <ImageView
        android:src="@drawable/bareinzahlung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_payin_payout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/payin_payout"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_dialog_konto_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_payin_payout"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="64dp"
        android:textSize="12sp"
        android:gravity="center"
        android:padding="8dp"
        android:text="Besitzer: Honky"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_dialog_payin"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_dialog_konto_owner"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:inputType="number"
        android:padding="0dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dialog_konto_owner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textSize="12sp"
        android:text="1245 26598456"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_payin_payout" />


    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edittext_dialog_payin"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="16dp"
        android:text="@string/text_dialog_confirm"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edittext_dialog_payin"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="16dp"
        android:text="@string/text_dialog_cancel"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</android.support.constraint.ConstraintLayout>