<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_casino_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dice_welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/dices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_player_money">


        <ImageView
            android:id="@+id/image_filz"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:scaleType="fitXY"
            android:src="@drawable/filz3" />

        <ImageView
            android:id="@+id/image_dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/image_dice2"
            android:layout_marginEnd="106dp"
            android:src="@drawable/dice1" />

        <ImageView
            android:id="@+id/image_dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/dice1" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_bet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dice_how_much_do_you_bet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/editText_custombet"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="..."
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_bet">

        <Button
            android:id="@+id/button_small_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="500€" />

        <Button
            android:id="@+id/button_mid_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1000€" />

        <Button
            android:id="@+id/button_big_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5000€" />

    </LinearLayout>

    <Button
        android:id="@+id/button_throw_dice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/dice_throw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText_custombet"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/text_player_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="Dein Vermögen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_casino_welcome" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGold"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_is_point_set">

        <TextView
            android:id="@+id/text_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorFilzGreen"
            android:gravity="center"
            android:text="10"
            android:textColor="@color/colorGold" />

        <TextView
            android:id="@+id/text_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorFilzGreen"
            android:gravity="center"
            android:text="9"
            android:textColor="@color/colorGold" />

        <TextView
            android:id="@+id/text_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorFilzGreen"
            android:gravity="center"
            android:text="8"
            android:textColor="@color/colorGold" />

        <TextView
            android:id="@+id/text_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorFilzGreen"
            android:gravity="center"
            android:text="6"
            android:textColor="@color/colorGold" />

        <TextView
            android:id="@+id/text_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorFilzGreen"
            android:gravity="center"
            android:text="5"
            android:textColor="@color/colorGold" />

        <TextView
            android:id="@+id/text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorFilzGreen"
            android:gravity="center"
            android:text="4"
            android:textColor="@color/colorGold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_is_point_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFilzGreen"
        android:gravity="center"
        android:text="@string/dice_point_is_set"
        android:textColor="@color/colorGold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_betsize"
        tools:textColor="@color/colorGold" />

    <TextView
        android:id="@+id/text_betsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFilzGreen"
        android:gravity="center"
        android:text="@string/dice_bet_size"
        android:textColor="@color/colorGold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dices"
        tools:textColor="@color/colorGold" />

</android.support.constraint.ConstraintLayout>